Add Forge GameTest foundation